Initial support for Java 11 without a `module-info.java`